--- a/leaderboard/build.gradle
+++ b/leaderboard/build.gradle
@@ -22,14 +22,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.google.guava:guava:32.1.2-jre'
-    implementation 'org.redisson:redisson:3.23.2'
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'com.google.guava:guava:32.1.2-jre'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('test') {
