--- a/steps/src/main/resources/application.yml
+++ b/steps/src/main/resources/application.yml
@@ -2,3 +2,5 @@ spring:
   data:
     mongodb:
       uri: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DB}
+  kafka:
+    bootstrap-servers: ${KAFKA_HOST}
