--- a/leaderboard/build.gradle
+++ b/leaderboard/build.gradle
@@ -22,7 +22,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-collections4:4.0'
     implementation 'org.redisson:redisson:3.23.2'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.kafka:spring-kafka'
