--- a/steps/build.gradle
+++ b/steps/build.gradle
@@ -22,7 +22,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-collections4:4.0'
     implementation 'com.google.guava:guava:32.1.2-jre'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.redisson:redisson:3.23.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
