--- a/leaderboard/build.gradle
+++ b/leaderboard/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'org.apache.commons:commons-collections4:4.0'
     implementation 'org.redisson:redisson:3.23.2'
     implementation 'com.google.code.gson:gson:2.10.1'
